<resources>
    <string name="app_name">TimeTable</string>
    <string name="timing">TIMING</string>
    <string name="subject">SUBJECT</string>
    <string name="edit">Modify</string>
    <string name="today">Today</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">save</string>
    <string name="delete_item">Delete Item</string>
</resources>
